[project]
name = "python_package"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aadit", email = "aaditsule0605@gmail.com"}
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[testpypi]
  username = __token__
  password = pypi-AgENdGVzdC5weXBpLm9yZwIkNzhlYWI3MmMtMWNmYi00MTViLTg3ZjMtNzVhYmRmYzllMGU2AAIqWzMsImRmZWE2MzVjLTI5ZDAtNGY1MC1hYmExLWU2ODA5N2YyM2JkOSJdAAAGIEJH38d1p968TgtLhMEwwUo3k4chdGgm_zSkcD5rwUJc
